--- a/client/src/modals/modal.module.css
+++ b/client/src/modals/modal.module.css
@@ -40,3 +40,14 @@
     overflow-y: scroll;
   }
 }
+
+@media screen and (max-width: 475px) {
+  .modal {
+    position: absolute;
+    top: 5vh;
+    width: 19rem;
+    left: calc(50% - 9.5rem);
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+}
