--- a/client/src/components/board.module.css
+++ b/client/src/components/board.module.css
@@ -2,6 +2,7 @@
   width: 80%;
   background-color: var(--main-color);
   padding: 2rem;
+  min-height: 100%;
 }
 
 @media screen and (max-width: 1200px) {
